// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonBase /> rendered in HOC <ButtonBase /> rendered in <Button /> should match snapshot 1`] = `
<button
  className="default font-size-md buttonClassname"
  onBlur={[MockFunction]}
  onClick={[MockFunction]}
  onFocus={[MockFunction]}
  onMouseDown={[MockFunction]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
  onMouseUp={[MockFunction]}
  onTouchEnd={[MockFunction]}
  onTouchStart={[MockFunction]}
  type="button"
>
  button
</button>
`;

exports[`<ButtonBase /> rendered in HOC <ButtonBase /> rendered in <ButtonText /> should match snapshot 1`] = `
<button
  className="default font-size-md buttonTextClassname"
  onBlur={[MockFunction]}
  onClick={[MockFunction]}
  onFocus={[MockFunction]}
  type="button"
>
  button-text
</button>
`;

exports[`<ButtonBase /> should match snapshot 1`] = `
<button
  className="default font-size-md"
  type="button"
>
  button
</button>
`;
